tests/evaluator/should_pass/prioritise.csp
channel a

external prioritise

procTest1 = prioritise(STOP, <{a}, {}>)
