tests/evaluator/should_fail/prioritise_empty.csp
external prioritise

procTest1 = prioritise(STOP, <>)
